--- a/front/variables.scss
+++ b/front/variables.scss
@@ -9,4 +9,10 @@
     --green-hover-ui: rgb(16, 153, 39);
 
     --black-hover-ui: rgb(54, 58, 55);
+
+    --lavanda-ui: #7269ef;
+    --lavanda-hover-ui: #483de3;
+
+    --gray-ui: rgb(175, 175, 175);
+    --gray-hover-ui: rgb(69, 68, 68);
 }
